# Mine_Sweeping

./: CMakeLists.txt  README.md  main.cpp
ConfigMgr/: Configure.cpp  Configure.h
Core/: board.cpp  board.h  unit.cpp  unit.h
UI/: GameGridButton.cpp  GameGridButton.h  GameWin.cpp  GameWin.h  Widget.cpp  Widget.h
